# Pipeline_Tests

./: docker-compose.yml  dockerfile  pyproject.toml  test_main.py
.github/workflows/: python-app.yml
logstash/: logstash.conf
