[project]
name = "pipelines"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Zatz Mazin",email = "gabrielmazin7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch (>=9.4.1,<10.0.0)",
    "fastapi (>=0.137.2,<0.138.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
